# pebble-battery-plus

./: .gitignore  CMakeLists.txt  appinfo.json  wscript
assets/: Source Code Bug 2.docx
assets/concepts/: Battery+ Features.rtf  Pebble Time Round 1.xcf
resources/: check_mark.pdc  confirm_sequence~bw.pdc  cup.pdc  cup~round.pdc  deleted_sequence~bw.pdc  low_battery.pdc  test_sequence.pdc  timeline_sync.pdc
src/: data.c  data.h  drawing.c  drawing.h  drawing_old.c  drawing_old.h  main.c  menu.c  menu.h  phone.c  phone.h  utility.c  utility.h
src/animation/: animation.c  animation.h  interpolation.c  interpolation.h
src/data/: data_api.c  data_api.h  data_library.c  data_library.h  data_old.c  data_old.h  data_shared.h
src/drawing/: bar_graph_card.c  bar_graph_card.h  card.c  card.h  dashboard_card.c  dashboard_card.h  drawing.c  drawing.h  line_graph_card.c  line_graph_card.h
src/drawing/cards/: bar_graph_card.c  card_render.c  card_render.h  dashboard_card.c  line_graph_card.c  record_card.c
src/drawing/windows/: alert_window.c
src/drawing/windows/alert/: alert_window.h  popup_window.c  popup_window.h
src/drawing/windows/edit/: pin_window.c  pin_window.h  selection_layer.c
src/js/: pebble-js-app.js
waftools/: defines.py
worker_src/: data_library.c  data_library.h  worker.c
